--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     2nd chnages
 
-    changes from kuriakose account github
+    changes from kuriakose > joykurias account github
 </body>
 </html>
