update new fchanges

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     update chnages from dally system
     git status
     git status
-    git status
+    git statusdfdfddf
     git status
 </body>
 </html>
